<resources>

    <string name="app_name">L5RCharacterSheet</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_character_menu">CharacterMenu</string>
    <string name="title_activity_character_sheet_menu">CharacterSheetMenu</string>
    <string name="title_l5rcharactersheet_list">L5RCharacterSheets</string>
    <string name="title_l5rcharactersheet_detail">L5RCharacterSheet Detail</string>
    <string name="l5rearth">Earth</string>
    <string name="l5rair">Air</string>
    <string name="l5rwater">Water</string>
    <string name="l5rfire">Fire</string>
    <string name="l5rvoid">Void</string>
    <string name="l5rstamina">Stamina</string>
    <string name="l5rwillpower">Willpower</string>
    <string name="l5rstrength">Strength</string>
    <string name="l5rperception">Perception</string>
    <string name="l5rreflexes">Reflexes</string>
    <string name="l5rawareness">Awareness</string>
    <string name="l5ragility">Agility</string>
    <string name="l5rintelligence">Intelligence</string>
    <string name="l5rhonor">Honor</string>
    <string name="l5rglory">Glory</string>
    <string name="l5rstatus">Status</string>
    <string name="l5rtaint">Taint</string>
    <string name="l5rvoidspent">Void Spent</string>
    <string name="l5rmovement">Movement</string>
    <string name="l5rinitiative">Initiative</string>
    <string name="l5rarmor_tn">Armor TN</string>
    <string name="l5rcurrent_initiative">Current</string>
    <string name="l5rreduction">Reduction</string>
    <string name="l5rcurrent_tn">Current TN</string>
    <string name="l5rwounds">Wounds</string>
    <string name="l5rcurrent_wounds">Current</string>
    <string name="l5rwounds_level">Level</string>
    <string name="l5rfreeaction">Free Action</string>
    <string name="l5rsimpleaction">Simple Action</string>
    <string name="l5rcomplexaction">Complex Action</string>
    <string name="l5rroll">Roll</string>
    <string name="l5rmax">Max</string>
    <string name="l5rclan">Clan</string>
    <string name="l5rfamily">Family</string>
    <string name="l5rschool">School</string>
    <string name="l5rxp_traits_void">Traits / Void</string>
    <string name="l5rxp_skills">Skills</string>
    <string name="l5rxp_adv_dis">Advantages / Disadvantages</string>
    <string name="l5rxp_custom">Custom</string>
    <string name="character_name">Name</string>
    <string name="single_digit_default">0</string>
    <string name="zero_roll_default">0K0</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="create_charater_no_name">Please enter a name.</string>
    <string name="not_enough_xp_upgrade">You do not have enough xp for this upgrade.</string>
    <string name="l5rxp">XP</string>
    <string name="l5rxp:">XP: </string>
    <string name="addxp">+ XP</string>
    <string name="subtractxp">- XP</string>
    <string name="add_symbol">+</string>
    <string name="sub_symbol">-</string>

    <color name="l5rearth">#cee0b3</color>
    <color name="l5rair">#ffff00</color>
    <color name="l5rwater">#aaaaff</color>
    <color name="l5rfire">#e2ac8d</color>
    <color name="l5rvoid">#8c827f</color>
    <color name="l5rtableheaderbg">#111111</color>
    <color name="l5rtableproprtytitlebg">#aaaaaa</color>
    <color name="l5rtableheadertext">#cccccc</color>

    <string name="title_activity_l5_rnew_character">L5RNewCharacterActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_l5_rcs__xp__traits">L5RCS_XP_TraitsActivity</string>

</resources>